Add style fixes

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,49 @@ nav {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
 }
+
+img {
+  height: 40vh;
+  object-fit: cover;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card .card-content .card-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.card-content-descr {
+  display: flex;
+  gap: 2rem;
+}
+
+.card .card-content p:last-child {
+  margin-top: 15px;
+}
+
+.imdb-link {
+  margin-top: 100005px;
+  color: black;
+  font-weight: bold;
+  border: 1px solid black;
+  padding: 2px 4px;
+  border-radius: 8px;
+  transition: 0.5s all;
+}
+
+.imdb-link:hover,
+.imdb-link:focus {
+  color: #26a69a;
+  border: 1px solid #26a69a;
+}
+
 .input-group {
   display: flex;
 }
@@ -40,4 +83,31 @@ nav {
 
 .btn-search:active {
   background-color: #26a69a;
+}
+
+[type="radio"]:checked + span:after,
+[type="radio"].with-gap:checked + span:before,
+[type="radio"].with-gap:checked + span:after {
+  border: 2px solid #ef6c00;
+}
+
+[type="radio"]:checked + span:after,
+[type="radio"].with-gap:checked + span:after {
+  background-color: #ef6c00;
+}
+
+.radio-group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nothing {
+  background-color: #ef6c00;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  display: block;
+
+  grid-column-start: 1;
+  grid-column-end: -1;
 }
